<resources>
    <string name="app_name">Panic Button</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitud">Latitude:</string>
    <string name="address_will_display_shortly">Address Will Display Shortly:</string>
    <string name="you_are_here">You are here:</string>
    <string name="longitud">Longitude:</string>
    <string name="longitud_hint">Longitude</string>
    <string name="latitud_hint">Latitude</string>
    <string name="press_to_send_alert">Press To Send Alert</string>
    <string name="title_activity_view_map">Map</string>
    <string name="submit">Submit</string>
    <string name="other">Other</string>
    <string name="you_selected">You selected</string>
    <string name="e_g_traffic_light">E.g. Traffic Light</string>
    <string name="description">Description</string>
    <string name="e_g_traffic_light_is_not_working">E.g. Traffic light is not working.</string>
    <string name="report_submitted">Report Submitted</string>
    <string name="thank_you_submit">Thank you submit</string>
    <string name="selectinc">Select Incident</string>

    <string-array name="infrastructure">
        <item>Street/Sidewalk</item>
        <item>Traffic Light</item>
        <item>Sewage</item>
        <item>Water</item>
        <item>Electric System</item>
        <item>Transportation</item>
        <item>Leafy Trees</item>
        <item>Graffiti</item>
        <item>Water Leak</item>
        <item>Trash</item>
        <item>Flooding</item>
    </string-array>
</resources>
